# neon-lang

./: .appveyor.yml  .gitignore  .gitmodules  .index.md.swp  .travis.yml  .woodpecker.yml  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  SConscript-libbid  SConscript-libbz2  SConscript-libcurl  SConscript-libcurses  SConscript-libeasysid  SConscript-libffi  SConscript-libhash  SConscript-liblzma  SConscript-libpcre  SConscript-libsqlite  SConscript-libutf8  SConscript-libz  SConstruct  antora-playbook.yml  appveyor.yml  ast.cpp  ast.h  bytecode.cpp  bytecode.h  cell.cpp  cell.h  common-errors.html  common-errors.md  compiler.cpp  compiler.h  disassembler.cpp  disassembler.h  docs.html  docs.md  download.html  (+44 more)
.builds/: alpine-latest-cmake.yml  archlinux-cmake.yml  debian-stable-cmake-all.yml  debian-stable-cmake.yml  debian-stable-scons-all.yml  debian-stable-scons.yml  fedora-latest-cmake.yml  freebsd-latest-cmake.yml  netbsd-latest-cmake.yml  openbsd-latest-cmake.yml  rockylinux-latest-cmake.yml  ubuntu-latest-cmake.yml
.circleci/: config.yml
.github/workflows/: ccpp.yml  codeql-analysis.yml  macos.yml  ubuntu.yml  windows.yml
_layouts/: default.html
cmake/: FindGMP.cmake
common/: neonext.h
contrib/NeonVM/: NeonVM.sln  bytecode.c  bytecode.h  cell.c  cell.h  dictionary.c  dictionary.h  enums.h  exec.h  framestack.c  framestack.h  global.c  global.h  neonvm.c  number.c  (+8 more)
cpp/: neon.h
css/: screen.css
doc/: language.md
docs/: .buildinfo  404.html  Makefile  antora.yml  conf.py  extensions.html  gemtext.py  genindex.html  grammar.xhtml  index.html  index.md  intro.html  intro.rst  library.html  make.bat  manifesto.html  objects.inv  overview.html  overview.rst  samples.html  search.html  searchindex.js  sitemap.xml  tutorial.html  tutorial.rst
exec/cnex/: .gitignore  CMakeLists.txt  SConstruct  array.c  array.h  bytecode.c  bytecode.h  cell.c  cell.h  cnex.c  cnex.sh  dictionary.c  dictionary.h  disassembly.c  disassembly.h  enums.h  exclude.txt  exec.h  extension.c  framestack.c  framestack.h  gc.c  gc.h  global.c  global.h  httpserver.c  httpserver.h  module.c  module.h  nstring.c  nstring.h  number.c  number.h  object.c  object.h  opcode.h  rtl_platform.h  rtl_posix.c  rtl_win32.c  run_test.py  (+9 more)
exec/cnex/lib/: binary.c  binary.h  datetime.c  datetime.h  debugger.c  debugger.h  file.c  file.h  file_posix.c  file_win32.c  io.c  io.h  math.c  math.h  mmap.h  mmap_posix.c  mmap_win32.c  net.c  net.h  os.c  os.h  os_posix.c  os_win32.c  posix.c  posix.h  process.h  process_posix.c  process_win32.c  random.c  random.h  random_posix.c  random_win32.c  runtime.c  runtime.h  runtime_posix.c  runtime_win32.c  socketx.h  sqlite.c  sqlite.h  string.c  (+12 more)
gh-pages/: CNAME  common-errors.md  grammar.xhtml  index.md  manifesto.md  overview.md  reference.md  tutorial.md
helium/: helium.py
html/: index.html
html>index/: Constants.html
js/: global.js
lib/: base.neon  bigint.neon  binary.cpp  binary.neon  bitwise.cpp  bitwise.neon  builtin.cpp  builtin.neon  cformat.neon  complex.neon  compress.cpp  compress.neon  console.cpp  console.neon  crypto.cpp  crypto.neon  curses.cpp  curses.neon  curses_const.cpp  datetime.cpp  datetime.neon  debugger.cpp  debugger.neon  dns.neon  encoding.neon  file.cpp  file.neon  file_const_posix.cpp  file_const_win32.cpp  file_posix.cpp  file_win32.cpp  global.cpp  global.neon  hash.cpp  hash.neon  hash_ressl.cpp  http.cpp  http.neon  io.cpp  io.neon  (+56 more)
lib/win32/: CMakeLists.txt  SConstruct  win32.cpp  win32.neon
neon/: lexer.neon  nels.neon  parser.neon
samples/: 99-bottles.neon  99-bottles.simple  cal.neon  curses-mouse.neon  curses.neon  daytime.neon  dhrystone.neon  dhrystone.simple  discard.neon  echo.neon  fizzbuzz.neon  forth.neon  httpd.neon  index.html  lisp.neon  othello.neon  rain.neon  samples.txt  sid.neon  sieve.neon  sudoku.neon  tetris.neon  whetstone.neon  whetstone.simple
scripts/: build_rtl_inc.py  build_rtlx_inc.py  c-exclude.txt  cli-exclude.txt  cpp-exclude.txt  extract.py  extract_errors.neon  extract_errors.py  gmp-fix-config-h.py  js-exclude.txt  jvm-exclude.txt  make_regex_test.py  make_thunks.py  make_unicode.neon  module-install.neon  run_c.py  run_cli.py  run_cnex.py  run_cpp.py  run_jnex.py  run_js.py  run_jvm.py  run_py.py  run_pynex.py  run_test.py  test_doc.py  test_import_optional.py  update_docs
src/: analyzer.cpp  analyzer.h  ast.cpp  ast.h  bundle.cpp  bundle.h  bytecode.cpp  bytecode.h  cell.cpp  cell.h  compiler.cpp  compiler.h  compiler_c.cpp  compiler_cli.cpp  compiler_cpp.cpp  compiler_js.cpp  compiler_jvm.cpp  compiler_null.cpp  debuginfo.cpp  debuginfo.h  disassembler.cpp  disassembler.h  exec.cpp  exec.h  format.cpp  format.h  httpserver.cpp  httpserver.h  intrinsic.cpp  intrinsic.h  lexer.cpp  lexer.h  main.cpp  neon.cpp  neonbind.cpp  neonc.cpp  neondis.cpp  neonext.h  neonstub.cpp  neonx.cpp  (+36 more)
t/: 42.neon  42.simple  LexerBufferTest1.neon  LexerBufferTest1.simple  LexerBufferTest2.neon  LexerBufferTest2.simple  LexerBufferTest3.neon  LexerBufferTest3.simple  LexerBufferTest4.neon  LexerBufferTest4.simple  LexerBufferTest5.neon  LexerBufferTest5.simple  arithmetic.neon  arithmetic.simple  arithmetic2.neon  arithmetic2.simple  array-append.neon  array-concat.neon  array-extend.neon  array-find.neon  array-for.neon  array-fraction.neon  array-index-write.neon  array-index.neon  array-last-method.neon  array-negative.neon  array-remove.neon  array-resize.neon  array-reversed.neon  array-slice.neon  array-sparse.neon  array-subscript.neon  array-tostring.neon  array.neon  array.simple  array2d.neon  arraysize.neon  arraysize.simple  assert-empty-array.neon  assert-enum.neon  (+504 more)
tests/: compare_expected.py  fuzz_lexer.cpp  fuzz_parser.cpp  lexer-coverage.expected  lexer-coverage.neon  parser-coverage.expected  parser-coverage.neon  perf_lexer.cpp  test_compiler.cpp  test_ffi.c  test_format.cpp  test_lexer.cpp  test_number.cpp  test_number_to_string.cpp  test_parser.cpp
tools/: coverage.neon  helium-exclude.txt  helium.py  imports.neon  ndb.neon  neonbuild.neon  neonfmt.neon  neonx.py
(+1803 files in other folders)
